# construction-inventory-system

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  docker-compose.yml
backend/: .env  .env.example  Dockerfile  Dockerfile.celery-beat  Dockerfile.celery-worker  README.md  alembic.ini  init.sql  pyproject.toml  requirements-celery.txt  requirements.txt  supervisord.conf  test_celery_setup.py
backend/alembic/: env.py
backend/app/: __init__.py  auth.py  config.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py
backend/app/cli/: commands.py
backend/app/routers/: __init__.py  auth.py  po.py  products.py  projects.py  reports.py  sites.py  stock.py  tasks.py  team.py  uploads.py  users.py
backend/app/tasks/: _init_.py  celery_app.py  daily_tasks.py  report_tasks.py
backend/app/utils/: __init__.py  excel_processor.py  logger.py  report_generator.py  stock_calculator.py
backend_data/: ec2_persistent_data.json
frontend/: .eslintrc.json  .prettierrc  Dockerfile  angular.json  karma.conf.js  nginx.conf  nginx.conf.old  package-lock.json  package.json  proxy.conf.json  tsconfig.json
frontend/src/: humans.txt  index.html  main.ts  offline.html  polyfills.ts  robots.txt  service-worker.js  styles.scss  zone-flags.ts
frontend/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.ts  app.module.ts
frontend/src/app/components/audit-logs/: audit-logs.component.html  audit-logs.component.scss  audit-logs.component.ts
frontend/src/app/components/dashboard/: dashboard.component.html  dashboard.component.scss  dashboard.component.ts
frontend/src/app/components/header/: header.component.html  header.component.scss  header.component.ts
frontend/src/app/components/login/: login.component.html  login.component.scss  login.component.ts
frontend/src/app/components/material-management/: material-management.component.html  material-management.component.scss  material-management.component.ts
frontend/src/app/components/not-found/: not-found.component.html  not-found.component.scss  not-found.component.ts
frontend/src/app/components/profile/: profile.component.ts
frontend/src/app/components/project-management/: project-management.component.html  project-management.component.scss  project-management.component.ts
frontend/src/app/components/project-sites/: project-sites.component.html  project-sites.component.ts
frontend/src/app/components/project-team/: project-team.component.html  project-team.component.ts
frontend/src/app/components/purchase-order/: purchase-order.component.html  purchase-order.component.scss  purchase-order.component.ts
frontend/src/app/components/reports/: reports.component.html  reports.component.ts
frontend/src/app/components/sidebar/: sidebar.component.html  sidebar.component.scss  sidebar.component.ts
frontend/src/app/components/stock-balance/: stock-balance.component.html  stock-balance.component.scss  stock-balance.component.ts
frontend/src/app/components/stock-entry/: stock-entry.component.html  stock-entry.component.scss  stock-entry.component.ts
frontend/src/app/guards/: auth.guard.ts  role.guard.ts
frontend/src/app/interceptors/: auth.interceptor.ts  error.interceptor.ts  jwt.interceptor.ts
frontend/src/app/models/: audit.model.ts  material.model.ts  po.model.ts  project.model.ts  report.model.ts  site.model.ts  stock.model.ts  user.model.ts
frontend/src/app/pipes/: filesize.pipe.ts  truncate.pipe.ts
frontend/src/app/services/: api.service.ts  audit.service.ts  auth.service.ts  material.service.ts  po.service.ts  project.service.ts  report.service.ts  stock.service.ts  user.service.ts
frontend/src/app/task-list/: task-list.component.scss  task-list.component.ts
frontend/src/assets/icons/: README.md  site.webmanifest
frontend/src/assets/images/: README.md
frontend/src/environments/: environment.docker.ts  environment.prod.ts  environment.staging.ts  environment.ts
frontend/src/services/: user.service
k8s/: backend-service.yaml  backend.yaml  frontend-service.yaml  frontend.yaml  namespace.yaml  postgres-pvc.yaml  postgres-service.yaml  postgres.yaml  redis-service.yaml  redis.yaml  secrets.yaml
(+19 files in other folders)
